# robot_plugin

real_robot/: CMakeLists.txt  package.xml
real_robot/behavior_trees/: my_robot_bt.xml
real_robot/config/: mapper_params_online_async.yaml  my_lidar_2d.lua  my_lidar_2d_load.lua  nav2_params.yaml  twist_mux.yaml
real_robot/description/: gazebo_control.xacro  lidar.xacro  robot_core.xacro
real_robot/launch/: cartographer.launch.py  launch_all.py  launch_gazebo.py  launch_rviz2.py  localization_amcl.py  localization_carto.py  navigation_launch.py  rsp.launch.py  slam_tool_box.py  twist_mux.launch.py
real_robot/map/: 3.pbstream  map.pgm  map.yaml
real_robot/rviz2/: real_robot.rviz
real_robot_plugins/: CMakeLists.txt  package.xml
real_robot_plugins/include/real_robot_plugins/: is_battery_low_condition.hpp  is_elevator_door_open.hpp  is_stop_command.hpp  load_new_map.hpp
real_robot_plugins/src/: is_battery_low_condition.cpp  is_elevator_door_open.cpp  is_stop_command.cpp  load_new_map.cpp
