<package format="3">
  <name>real_robot_plugins</name>
  <version>0.0.0</version>
  <description>Custom Battery Plugin for real_robot</description>
  <maintainer email="huy@todo.todo">Huy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>nav2_behavior_tree</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>